--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,22 +1,25 @@
 .wrapperFooter {
-  /*border: 1px solid pink;*/
   position: fixed;
   bottom: 0px;
   width: 100vw;
   display: grid;
-  /*background-color: white;*/
   align-content: center;
   justify-content: center;
 }
 
 .footer {
-  /*border: 1px solid blue;*/
   width: 100%;
   padding: 2rem 0rem 2rem 0rem;
   text-align: center;
   color: black;
   font-family: 'Merriweather', sans-serif;
   font-size: 1rem;
-  text-transform: lowercase;
+  text-transform: capitalize;
   letter-spacing: 8px;
+}
+
+@media only screen and (min-width: 600px) {
+  .footer {
+    font-size: 1.2rem;
+  }
 }
