--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -3,7 +3,6 @@
   z-index: 10;
   width: 100vw;
   display: grid;
-  /*background-color: rgba(255,255,255, 0.98 );*/
   padding-top: 3rem;
   padding-bottom: 3rem;
   width: 100%;
@@ -11,9 +10,10 @@
   text-transform: uppercase;
   text-align: center;
   font-family: 'Lora', serif;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   letter-spacing: 8px;
 }
+
 .nav {
   display: grid;
   align-content: space-around;
@@ -36,32 +36,30 @@
   grid-row-gap: 1rem;
   align-content: center;
 }
-/*
-.nav {
-  position: fixed;
-  right: 0px;
-  width: 30rem;
-  text-align: center;
-  font-family: 'Lora', serif;
-  color: black;
-  text-transform: lowercase;
-  font-size: 1.2rem;
-  letter-spacing: 8px;
-  -webkit-transform-origin: right top;
-  -webkit-transform:translateY(400px) translateX(-3.6rem) rotate(-270deg) ;
-}
-*/
-/*
-.items {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-*/
+
 .btn {
   z-index: 50;
   cursor: pointer;
   position: fixed;
   top: 1.2rem;
   right: 6rem;
+}
 
+@media only screen and (min-width: 600px) {
+  .nav {
+    position: fixed;
+    right: 3rem;
+    width: 30rem;
+    height: auto;
+    text-align: center;
+    font-size: 1.2rem;
+    -webkit-transform-origin: right top;
+    -webkit-transform:translateY(400px)  rotate(-270deg) ;
+  }
+
+  .items {
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
